force-app/main/default/objects/FX_Blotter_Profile_Manager__mdt/FX_Blotter_Profile_Manager__mdt.object-meta.xml
<CustomObject>
    <label>FX Blotter Profile Manager</label>
    <pluralLabel>FX Blotter Profile Manager</pluralLabel>
</CustomObject>