force-app/main/default/objects/FX_Blotter_Profile_Manager__mdt/fields/FX_Dashboard_Allow_Edit__c.field-meta.xml
<CustomField>
    <fullName>FX_Dashboard_Allow_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FX Dashboard Allow Edit</label>
    <type>Checkbox</type>
</CustomField>