force-app/main/default/objects/FX_Blotter_Profile_Manager__mdt/fields/FX_Order_Allow_Allocate__c.field-meta.xml
<CustomField>
    <fullName>FX_Order_Allow_Allocate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FX Order Allow Allocate</label>
    <type>Checkbox</type>
</CustomField>